[package]
name = "aptos"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "mainnet" }
aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core", branch = "mainnet" }
aptos-crypto-derive = { git = "https://github.com/aptos-labs/aptos-core", branch = "mainnet" }
clap = { version = "4.5.34", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
hex = "0.4.3"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
